--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <h1>My name is Soujanya Kirni</h1>
     <h6>My favourite team sport is Badminton</h6>
     <p>I like playing <b>badminton</b> as it focuses more on the eye sight and improves our body muscles to grow.It gives us a <b>full body exercise</b></p>
+   
+    <hr>
+    
+    <h1>Ordered List Section</h1>
+    <h3>Team Winners</h3>
+    <ol>
+        <li>Ramya</li>
+        <li>Ashwetha</li>
+        <li>Premika</li>
+    </ol>
 </body>
 
 </html>
+
