--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
     <p>I like playing <b>badminton</b> as it focuses more on the eye sight and improves our body muscles to grow.It gives us a <b>full body exercise</b></p>
    
     <hr>
-    
-    <h1>Ordered List Section</h1>
+
+    <h1>Ordered List and Unordered List Section</h1>
     <h3>Team Winners</h3>
     <ol>
         <li>Ramya</li>
         <li>Ashwetha</li>
         <li>Premika</li>
     </ol>
+
+    <ul>
+            <li>Paradise</li>
+            <li>Jalavihar</li>
+            <li>Wonderla</li>
+    </ul>
 </body>
 
 </html>
