added aboutme and image

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <li>Jalavihar</li>
             <li>Wonderla</li>
     </ul>
+
+    <a href="aboutme.html">Go to aboutme page</a>
 </body>
 
 </html>
