--- a/index.html
+++ b/index.html
@@ -27,6 +27,58 @@
     </ul>
 
     <a href="aboutme.html">Go to aboutme page</a>
+
+    <hr>
+
+    <h1>Table Section</h1>
+
+    <table>
+        <style>
+            table{
+                border-collapse:collapse;
+                width:100%;
+            }
+
+            td, th{
+                border:1px solid black;
+                text-align:left;
+                padding:8px
+            }
+        </style>
+    <tr>
+        <th>Name of a country </th>
+        <th> Reason for recommendation </th>
+        <th> No.of days to spend </th>
+    </tr>
+
+    <tr>
+        <td> India </td>
+        <td> To visit the piligrimages </td>
+        <td> 10 </td>       
+    </tr>
+
+    <tr>
+        <td> China </td>
+        <td> To visit China wall </td>
+        <td> 5 </td>
+        
+    </tr>
+
+    <tr>
+        <td> Nepal </td>
+        <td> To see the snow mountains </td>  
+        <td> 3 </td>
+        
+    </tr>
+    <tr>
+        <td> Sri Lanka </td>
+        <td> To visit the beaches </td>
+        <td> 6 </td>
+    </tr>
+
+    </table>
+
+
 </body>
 
 </html>
