--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
 
     </table>
 
+    ---
+    <h1>Code fencing Section</h1>
+
+    <q>Loop Over querySelectorAll Matches</q>
+    <br>
+    <a href="https://stackoverflow.com/questions/12330086/how-to-loop-through-selected-elements-with-document-queryselectorall">Link to acess code</a>
+    <pre>
+        buttons.forEach((button) => {
+            button.addEventListener('click', () => {
+              console.log("forEach worked");
+            });
+          });
+    </pre>
 
 </body>
 
