--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <a href="bonus.html">BONUS</a>
     <h1>My name is Soujanya Kirni</h1>
     <h6>My favourite team sport is Badminton</h6>
     <p>I like playing <b>badminton</b> as it focuses more on the eye sight and improves our body muscles to grow.It gives us a <b>full body exercise</b></p>
@@ -78,12 +79,15 @@
 
     </table>
 
-    ---
+    <hr>
+
     <h1>Code fencing Section</h1>
 
-    <q>Loop Over querySelectorAll Matches</q>
+    
     <br>
-    <a href="https://stackoverflow.com/questions/12330086/how-to-loop-through-selected-elements-with-document-queryselectorall">Link to acess code</a>
+    <blockquote cite="https://stackoverflow.com/questions/12330086/how-to-loop-through-selected-elements-with-document-queryselectorall">Loop Over querySelectorAll Matches</blockquote>
+
+    <a href="https://stackoverflow.com/questions/12330086/how-to-loop-through-selected-elements-with-document-queryselectorall">Link to access code</a>
     <pre>
         buttons.forEach((button) => {
             button.addEventListener('click', () => {
