--- a/aboutme.html
+++ b/aboutme.html
@@ -12,6 +12,6 @@
     <p>I like the book as it advocates the importance of financial literacy, financial independence and building wealth through investing in assets, real estate investing, starting and owning businesses</p>
 
 
-    <img src="img2.jpg" alt="Book Image">
+    <img src="bookimage.jpg" alt="Book Image" height="300px" width="300px">
 </body>
 </html>
