--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 
 <body>
     <a href="bonus.html">BONUS</a>
-    <h1>My name is Soujanya Kirni</h1>
+
+    <h1>Fvourite Sport</h1>
     <h6>My favourite team sport is Badminton</h6>
-    <p>I like playing <b>badminton</b> as it focuses more on the eye sight and improves our body muscles to grow.It gives us a <b>full body exercise</b></p>
-   
+    <p>I like playing <b>badminton</b> as it focuses more on the <b>eye sight</b> and improves our body muscles to grow.It gives us a full body exercise</p>
+
+ 
     <hr>
 
     <h1>Ordered List and Unordered List Section</h1>
@@ -18,6 +20,12 @@
     <ol>
         <li>Ramya</li>
         <li>Ashwetha</li>
+            <ol>
+                <li>Sagar</li>
+                <li>Shiva</li>
+                <li>Malik</li>
+            </ol>
+
         <li>Premika</li>
     </ol>
 
@@ -27,11 +35,13 @@
             <li>Wonderla</li>
     </ul>
 
-    <a href="aboutme.html">Go to aboutme page</a>
+    <a href="aboutme.html">Go to AboutMe Page</a>
 
     <hr>
 
     <h1>Table Section</h1>
+
+    <p>The Table incluedes the 4 different countries someone can visit.I would recommend India,China,Nepal and Srilanka to visit.These are the most popular countries in the world for tourism.</p>
 
     <table>
         <style>
@@ -87,7 +97,7 @@
     <br>
     <blockquote cite="https://stackoverflow.com/questions/12330086/how-to-loop-through-selected-elements-with-document-queryselectorall">Loop Over querySelectorAll Matches</blockquote>
 
-    <a href="https://stackoverflow.com/questions/12330086/how-to-loop-through-selected-elements-with-document-queryselectorall">Link to access code</a>
+    <a href="https://stackoverflow.com/questions/12330086/how-to-loop-through-selected-elements-with-document-queryselectorall">Link to Stack Overflow</a>
     <pre>
         buttons.forEach((button) => {
             button.addEventListener('click', () => {
@@ -95,8 +105,7 @@
             });
           });
     </pre>
-
 </body>
-
 </html>
+
 
